[package]
name = "casperguard"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.7.2" 

[lib]
name = "casperguard"
path = "src/lib.rs"

# Keep your existing contract builder hook
[[bin]]
name = "casperguard_build_contract"
path = "src/main.rs"

# ADD THIS LINE: Explicitly anchor the schema generator
[[bin]]
name = "casperguard_build_schema"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = true
