[package]
name = "casperguard"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.7.2"

[build-dependencies]
odra-build = "2.7.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.7.2"

[lib]
name = "casperguard"
path = "src/lib.rs"

[[bin]]
name = "casperguard_build_contract"
path = "src/bin/casperguard_build_contract.rs"
test = false

[[bin]]
name = "casperguard_build_schema"
path = "src/bin/casperguard_build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = true
